--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,21 @@
+.label{
+  margin-right:5px;
+  box-shadow:inset 0px 1px 0px 0px #f7c5c0;
+	background:linear-gradient(to bottom, #fc8d83 5%, #e4685d 100%);
+	background-color:#fc8d83;
+	border-radius:6px;
+	border:1px solid #d83526;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:10px;
+	font-weight:bold;
+	padding:5px 20px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #b23e35;
+}
+
 .App {
   text-align: center;
 }
