docker work timezone problem

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,8 @@
 
 .App {
   text-align: center;
-  background-image:url('./pictures/darknet.jpeg')
+  background-image:url('./pictures/darknet.jpeg');
+  min-height: 800px;
 }
 
 .App-logo {
